--- a/app/src/main/res/layout/fragment_country_products.xml
+++ b/app/src/main/res/layout/fragment_country_products.xml
@@ -5,7 +5,7 @@
     android:id="@+id/srl_fr_country_products"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.frgment.products.country.CountryProductsFragment">
+    tools:context=".view.frgment.products.page.CountryProductsFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_fr_country_products"
