continue creating app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="color_blue_selected">#19a1d8</color>
     <color name="gray_46">#757575</color>
     <color name="gray_13">#212121</color>
+    <color name="color_yellow_selected">#ffd972</color>
 
 </resources>
