--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dl_root_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".view.activity.MainActivity"
-    android:baselineAligned="false">
+    tools:ignore="ContentDescription"
+    tools:openDrawer="start">
 
-    <FrameLayout
-        android:id="@+id/fl_act_main_frame"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"/>
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
-    <FrameLayout
-        android:id="@+id/fl_act_secondary_frame"
-        android:layout_width="0dp"
+        <FrameLayout
+            android:id="@+id/fl_act_main_frame"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+
+        <FrameLayout
+            android:id="@+id/fl_act_secondary_frame"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nv_act_main_nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
-
-</LinearLayout>
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:headerLayout="@layout/main_navigation_header"
+        app:menu="@menu/main_drawer_menu" />
+</android.support.v4.widget.DrawerLayout>
