--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="6dp">
 
     <LinearLayout
@@ -11,26 +11,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <com.example.foodtask.view.custom.SquareImageView
             android:id="@+id/iv_it_product_image"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="4" />
+            android:layout_width="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:srcCompat="@drawable/ic_launcher_background"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_it_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:singleLine="true"
             android:ellipsize="end"
+            android:singleLine="true"
             tools:text="Морковка" />
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1" />
+
         <View
+            android:id="@+id/vi_category_border"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="bottom"
