--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -31,6 +31,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_fr_order"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
