--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -14,16 +14,19 @@
         <com.example.foodtask.view.custom.SquareImageView
             android:id="@+id/iv_it_product_image"
             android:layout_width="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:srcCompat="@drawable/ic_launcher_background"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="8dp"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_it_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_gravity="center"
             android:ellipsize="end"
             android:singleLine="true"
             tools:text="Морковка" />
