--- a/presentation/src/main/res/layout/item_order.xml
+++ b/presentation/src/main/res/layout/item_order.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackgroundBorderless"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/gray_46"
+            android:textSize="18sp"
             tools:text="Морковь" />
 
         <TextView
@@ -23,13 +23,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/gray_46"
+            android:textSize="18sp"
             tools:text="600,00" />
 
         <TextView
             android:id="@+id/tv_it_order_sum_currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
+            android:textSize="18sp"
             android:textColor="@color/gray_46"
             tools:text="Р" />
     </LinearLayout>
@@ -37,7 +39,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="12dp">
 
         <TextView
             android:id="@+id/tv_it_order_unit_count"
@@ -50,14 +53,15 @@
             android:id="@+id/tv_it_order_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
+            android:textAllCaps="true"
             android:textColor="@color/gray_46"
             tools:text="КГ" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:text="@string/common_multiplication"
             android:textColor="@color/gray_46" />
 
@@ -65,7 +69,7 @@
             android:id="@+id/tv_it_order_price_per_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:textColor="@color/gray_46"
             tools:text="50,00" />
 
@@ -73,7 +77,7 @@
             android:id="@+id/tv_it_order_currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:textColor="@color/gray_46"
             tools:text="P" />
 
@@ -83,7 +87,7 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/tv_it_order_order_unit_count"
+            android:id="@+id/tv_it_order_total_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/gray_46"
@@ -93,14 +97,15 @@
             android:id="@+id/tv_it_order_order_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
+            android:textAllCaps="true"
             android:textColor="@color/gray_46"
             tools:text="КГ" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:text="@string/common_multiplication"
             android:textColor="@color/gray_46" />
 
@@ -108,7 +113,7 @@
             android:id="@+id/tv_it_order_order_price_per_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:textColor="@color/gray_46"
             tools:text="50,00" />
 
@@ -116,7 +121,7 @@
             android:id="@+id/tv_it_order_order_currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
             android:textColor="@color/gray_46"
             tools:text="P" />
     </LinearLayout>
