--- a/presentation/src/main/res/layout/fragment_order.xml
+++ b/presentation/src/main/res/layout/fragment_order.xml
@@ -5,36 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.frgment.order.OrderFragment">
+    tools:context=".view.frgment.order.OrderFragment"
+    tools:ignore="ContentDescription">
 
     <LinearLayout
+        android:id="@+id/ll_fr_order_info_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
->
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_fr_order_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="#34" />
+            tools:text="#34" />
 
         <Button
-            android:id="@+id/bt_fr_order_number_clear"
+            android:id="@+id/bt_fr_order_order_clear"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
+            android:background="?selectableItemBackgroundBorderless"
             android:text="@string/common_clear_all"
-            android:textColor="@color/color_blue_selected" />
+            android:textColor="@color/color_blue_selected"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_fr_order_empty_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
@@ -61,8 +64,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="24dp"
+            android:layout_marginTop="24dp"
             android:gravity="center"
             android:text="@string/order_empty_description" />
 
@@ -72,6 +74,9 @@
         android:id="@+id/rv_fr_order"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:visibility="gone" />
 
@@ -90,7 +95,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_tv_fr_order_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -109,27 +114,16 @@
             tools:text="P" />
     </LinearLayout>
 
-    <FrameLayout
+    <Button
+        android:id="@+id/bt_fr_order_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp">
-
-        <Button
-            android:id="@+id/bt_fr_order_pay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@color/color_blue_selected"
-            android:enabled="false"
-            android:text="@string/common_pay"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:layout_marginStart="24dp"
-            app:srcCompat="@drawable/ic_menu_report" />
-    </FrameLayout>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/pay_button_background"
+        android:drawableStart="@drawable/ic_menu_report"
+        android:text="@string/common_pay"
+        android:enabled="false"
+        android:textColor="@color/white" />
 </LinearLayout>
