--- a/presentation/src/main/res/layout/item_product.xml
+++ b/presentation/src/main/res/layout/item_product.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="6dp">
+    app:cardCornerRadius="6dp"
+    android:background="?selectableItemBackgroundBorderless">
 
     <LinearLayout
         android:layout_width="match_parent"
