--- a/presentation/src/main/res/layout/fragment_main_products.xml
+++ b/presentation/src/main/res/layout/fragment_main_products.xml
@@ -13,7 +13,7 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/color_primary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.v7.widget.Toolbar
