--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3b454f</color>
-    <color name="colorPrimaryDark">#343434</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="color_primary">#3b454f</color>
+    <color name="color_primary_dark">#343434</color>
+    <color name="color_accent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="color_blue_selected">#19a1d8</color>
     <color name="gray_46">#757575</color>
